--- a/company.html
+++ b/company.html
@@ -206,7 +206,7 @@
       <h5 class="card-title"><br>
         Jonathan Baron '24</h5>
       <h6 class="card-subtitle mb-2 text-muted">Director</h6>
-      <p class="card-text">Jonathan is a second-year student majoring in Political Science and Economics. He is from Los Angeles, but prefers the Boston snow to sunny SoCal beaches (for some reason). In his free time, he enjoys reading, creative writing, and calligraphy. On stage, he has performed stand-up comedy and improv theatre, but this is his first time directing a play — and he’s very excited about it!</</p>
+      <p class="card-text">Jonathan is a third-year student majoring in Political Science and Economics. He is from Los Angeles, but prefers the Boston snow to sunny SoCal beaches (for some reason). In his free time, he enjoys reading, creative writing, and calligraphy. On stage, he has performed stand-up comedy and improv theatre, but this is his first time directing a play — and he’s very excited about it!</</p>
     </div>
   </div>
 </div>
