--- a/company.html
+++ b/company.html
@@ -93,7 +93,7 @@
   </div>
   <div>
     <dt>Sound Design and Op</dt>
-    <dd>V Royzen</dd>
+    <dd>Veronica Royzen</dd>
   </div>
   <div>
     <dt>Deck Crew</dt>
@@ -168,7 +168,7 @@
       <h5 class="card-title"><br>
         Katie Copeland</h5>
       <h6 class="card-subtitle mb-2 text-muted">Camilla, Teresa, [Cousin, Mistress]</h6>
-      <p class="card-text">Josie is a third year Theatre major with a Performance concentration and a Political Science minor. Her last credit was in the Northeastern Theatre Department’s production of “Love and Information,” and she recently spent the summer studying the Meisner Technique at the Maggie Flanigan Studio in New York. This is her first time working with New Renaissance, and she is so grateful to everyone involved for their enthusiasm and kindness, and hopes that you enjoy the show.</p>
+      <p class="card-text">KATIE I NEED BIO</p>
     </div>
   </div>
 </div>
@@ -180,7 +180,7 @@
       <h5 class="card-title"><br>
         Sarah Waggoner</h5>
       <h6 class="card-subtitle mb-2 text-muted">Marina, [Girl, New Servant]</h6>
-      <p class="card-text"> Test Description</p>
+      <p class="card-text"> SARAH I NEED BIO</p>
     </div>
   </div>
 </div>
@@ -238,18 +238,6 @@
 <br/>
 <div class="col-md-4">
   <div class="card">
-    <div class="card-body"> <img class="card-img-top" src="images/Wynn.jpg" alt="Headshot of Wynn Graves">
-      <h5 class="card-title"><br>
-        Wynn Graves '24</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Deck Crew</h6>
-      <p class="card-text">Wynn is a Theatre major with a Media Production minor from Moline, IL. They have previously worked on How to Survive a Pandemic (Shira Weiss and Kaitlyn Fiery) as a sound designer and board operator and As U Like It (NUTD) on set construction. They are a member of NUAGE and do work for Greenpeace outside of school. </p>
-    </div>
-  </div>
-</div>
-<br>
-<br/>
-<div class="col-md-4">
-  <div class="card">
     <div class="card-body"> <img class="card-img-top" src="images/Lou.jpg" alt="Headshot of Lou Conrad">
       <h5 class="card-title"><br>
         Lou Conrad '23</h5>
@@ -260,11 +248,129 @@
 </div>
   <br>
   <br/>
-  
-  
-  +
+  <div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Dani.jpg" alt="Headshot of Dani Balkin">
+      <h5 class="card-title"><br>
+        Dani Balkin</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Props Director</h6>
+      <p class="card-text">Dani Balkin is in her second production role at Northeastern. She’s an American Sign Language English-Interpreting Major with a theater minor. She’s had a great time with New Ren and would like to thank the Beheld team for their time and energy. Enjoy the show! </p>
+    </div>
+  </div>
+</div>
+  <br>
+  <br/>
+  <div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Ivy.jpg" alt="Headshot of Ivy Kee">
+      <h5 class="card-title"><br>
+        Ivy Kee</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Playwright</h6>
+      <p class="card-text">Ivy Kee (Playwright) is a fifth year Theatre Performance major with minors in Psychology and Performance & Social Change. She has been a member of New Ren since 2019, previously serving as the Secretary/Vice President from 2019-2020 and acting in productions such as Joker’s Wild (Hanzo) and Stop Kiss (Sara). This is the first play she has ever written; and she will be seen next in the NU Theatre Department’s production of Problem Play (Courtney).</p>
+    </div>
+  </div>
+</div>
+</div>
+  <br>
+  <br/>
+  <div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Ethan.jpg" alt="Headshot of Ethan Kjersgard">
+      <h5 class="card-title"><br>
+        Ethan Kjersgard</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Playwright</h6>
+      <p class="card-text">ETHAN I NEED BIO</p>
+    </div>
+  </div>
+</div>
+  </div>
+  <br>
+  <br/>
+  <div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Isaac.jpg" alt="Headshot of Isaac Adnan">
+      <h5 class="card-title"><br>
+        Isaac Adnan</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Assistant Stage Manager</h6>
+      <p class="card-text">ISAAC I NEED BIO</p>
+    </div>
+  </div>
+</div>
+</div>
+  <br>
+  <br/>
+  <div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Veronica.jpg" alt="Headshot of Veronica Royzen">
+      <h5 class="card-title"><br>
+        Veronica Royzen</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Sound Design and Op</h6>
+      <p class="card-text">Veronica is a first-year Mechanical Engineering major. She hopes to find a way to combine her love for sound design, film editing, and her major as a career.</p>
+    </div>
+  </div>
+</div>
+  <br>
+  <br/>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Ella.jpg" alt="Headshot of Ella Dunn">
+      <h5 class="card-title"><br>
+        Ella Dunn</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Dramaturg, Costume Designer</h6>
+      <p class="card-text"> Ella is a second year Behavioral Neuroscience and Philosophy major originally from Vail CO. This is her first show with New Renaissance, and she is excited for everyone to see the hard work and witchy vibes everyone has put in to Beheld! </p>
+    </div>
+  </div>
+</div>
+  <br>
+  <br/>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Z.jpg" alt="Headshot of Z Weber">
+      <h5 class="card-title"><br>
+        Z Weber</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Lighting Designer</h6>
+      <p class="card-text">Z I NEED BIO</p>
+    </div>
+  </div>
+</div>
 <br>
 <br/>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Ainsley.jpg" alt="Headshot of Ainsley Derosier">
+      <h5 class="card-title"><br>
+        Ainsley Derosier</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Deck Crew</h6>
+      <p class="card-text">AINSLEY I NEED BIO</p>
+    </div>
+  </div>
+</div>
+<br>
+<br/>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Eshna.jpg" alt="Headshot of Eshna Kulshreshtha">
+      <h5 class="card-title"><br>
+        Eshna Kulshreshtha</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Deck Crew</h6>
+      <p class="card-text">ESHNA I NEED BIO</p>
+    </div>
+  </div>
+</div>
+<br>
+<br/>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Indu.jpg" alt="Headshot of Indu Holdsworth">
+      <h5 class="card-title"><br>
+        Indu Holdsworth '23</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Interim Producer</h6>
+      <p class="card-text">Indu is a fourth-year Ecology and Evolutionary Biology major with a minor in Women's Gender and Sexuality Studies. Previous credits include Props Manager for You Can't Take It With You (Bosque), Assistant Stage Manager of Urinetown (Bosque), Sound Operator for Cultural Day Shows (UWC-USA), and Stage Manager of The Box Play (UWC-USA). </p>
+    </div>
+  </div>
+<br>
+<br/>
+
 	
 <!--EBOARD-->
 	
@@ -289,6 +395,7 @@
       <p class="card-text">Indu is a fourth-year Ecology and Evolutionary Biology major with a minor in Women's Gender and Sexuality Studies. Previous credits include Props Manager for You Can't Take It With You (Bosque), Assistant Stage Manager of Urinetown (Bosque), Sound Operator for Cultural Day Shows (UWC-USA), and Stage Manager of The Box Play (UWC-USA). </p>
     </div>
   </div>
+  
 </div>
 <br>
 <br/>
