--- a/thanks.html
+++ b/thanks.html
@@ -19,16 +19,16 @@
           <a class="btn btn-primary btn-lg" href="index.html" role="button">Table of Contents</a>
        </p>
     </div>
-       <div class="row text-center">
+	<div class="row text-center">
           <div class="col-lg-6 offset-lg-3"><h5>New Renaissance Theatre Company would like to thank the following:</h5> </div>
-       </div>
+    </div>
 
        
        <br/>
        <div class="row">
 		   <div class="col-md-4"><p><br>Northeastern University Department of Theatre</p></div>
 		   <div class="col-md-4"><p><br>Marti McIntosh</p></div>
-		   <div class="col-md-4"><p><br>Vidisha Agarwalla</p></div>
+		   <div class="col-md-4"><p><br>Marie Siopy</p></div>
 		   
            <div class="col-md-4"><p><br>and everyone who attends our productions!</p></div><br><br/>
 		   <div><img class="col-md-4 logo-image" src="images/saf.png" alt="Student Activity Fee logo"><div></div>
