--- a/company.html
+++ b/company.html
@@ -368,10 +368,9 @@
       <p class="card-text">Indu is a fourth-year Ecology and Evolutionary Biology major with a minor in Women's Gender and Sexuality Studies. Previous credits include Props Manager for You Can't Take It With You (Bosque), Assistant Stage Manager of Urinetown (Bosque), Sound Operator for Cultural Day Shows (UWC-USA), and Stage Manager of The Box Play (UWC-USA). </p>
     </div>
   </div>
+  </div>
 <br>
 <br/>
-<hr>
-<hr/>
 <br>
 <br/>
 
