--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
     <div class="jumbotron jumbotron-fluid text-center">
        <h1 class="display-4">Beheld</h1>
-		<h1 class="display-3">by Ivy Lee</h1><br>
+		<h1 class="display-3">by Ivy Kee</h1><br>
 		<p class="lead"><strong>DIGITAL PROGRAM</strong></p>
 		<p class="lead">Run time: 60 minutes<br><i>There will be no intermission</i></p>
        <hr class="my-4">
 	   <p class="lead">
-          <a class="btn btn-dark btn-lg" href="file:///C:/Users/Luna/Downloads/GPIProgram-main/storyandworld.html" role="button">Story and World</a>
+          <a class="btn btn-dark btn-lg" href="storyandworld.html" role="button">Story and World</a>
        </p>
        <p class="lead">
-          <a class="btn btn-secondary btn-lg" href="file:///C:/Users/Luna/Downloads/GPIProgram-main/note.html" role="button">Playwright's Note</a>
+          <a class="btn btn-secondary btn-lg" href="note.html" role="button">Playwright's Note</a>
        </p>
 		<p class="lead">
-          <a class="btn btn-success btn-lg" href="file:///C:/Users/Luna/Downloads/GPIProgram-main/company.html" role="button">Company Bios</a>
+          <a class="btn btn-success btn-lg" href="company.html" role="button">Company Bios</a>
        </p>
 				<p class="lead">
-          <a class="btn btn-light btn-lg" href="file:///C:/Users/Luna/Downloads/GPIProgram-main/thanks.html" role="button">Acknowledgements</a>
+          <a class="btn btn-light btn-lg" href="thanks.html" role="button">Acknowledgements</a>
        </p>
 		<p><br><br>CONTENT WARNING: Sample Text.</p>
     </div>
