--- a/company.html
+++ b/company.html
@@ -168,7 +168,7 @@
       <h5 class="card-title"><br>
         Katie Copeland</h5>
       <h6 class="card-subtitle mb-2 text-muted">Camilla, Teresa, [Cousin, Mistress]</h6>
-      <p class="card-text">KATIE I NEED BIO</p>
+      <p class="card-text">Katie is elated to perform in her first production with New Renaissance! She has been an actress since the age of eight, and recently performed with the NEU Shakespeare Society last Spring. To the cast and crew, “good morrow,” and break legs!</p>
     </div>
   </div>
 </div>
@@ -292,7 +292,7 @@
       <h5 class="card-title"><br>
         Isaac Adnan</h5>
       <h6 class="card-subtitle mb-2 text-muted">Assistant Stage Manager</h6>
-      <p class="card-text">ISAAC I NEED BIO</p>
+      <p class="card-text">Isaac Adnan is a first year Ecology and Evolutionary Biology major who will probably end up minoring in theatre. While this is his first production with New Renaissance, he has previously stage managed for his high school’s production of Chicago, as well as for his Senior Revue. When not at rehearsal, he can be found around Boston staring at cool-looking plants or playing Stardew Valley.</p>
     </div>
   </div>
 </div>
@@ -341,7 +341,7 @@
       <h5 class="card-title"><br>
         Ainsley Derosier</h5>
       <h6 class="card-subtitle mb-2 text-muted">Deck Crew</h6>
-      <p class="card-text">AINSLEY I NEED BIO</p>
+      <p class="card-text">Ainsley is a first year marine biology major with a potential minor in Spanish! It is their first year doing anything related to theater and they picked up the position of “deck crew,” are are enjoying it! </p>
     </div>
   </div>
 </div>
