--- a/company.html
+++ b/company.html
@@ -83,9 +83,29 @@
     <dt>Costume Designer</dt>
     <dd>Ella Dunn</dd>
   </div>
+    <div>
+    <dt>Dramaturg</dt>
+    <dd>Ella Dunn</dd>
+  </div>
   <div>
     <dt>Props Director</dt>
     <dd>Danielle Balkin</dd>
+  </div>
+    <div>
+    <dt>Wardrobe Crew</dt>
+    <dd>Danielle Balkin</dd>
+  </div>
+    <div>
+    <dt>Deck Crew</dt>
+    <dd>Danielle Balkin</dd>
+  </div>
+  <div>
+    <dt>Set Designer</dt>
+    <dd>Lou Conrad</dd>
+  </div>
+    <div>
+    <dt>Captions Operator</dt>
+    <dd>Lou Conrad</dd>
   </div>
   <div>
     <dt>Lighting Design and Op</dt>
@@ -102,7 +122,14 @@
     <dt>Deck Crew</dt>
     <dd>Eshna Kulshreshtha</dd>
   </div>
-
+  </div>
+    <dt>Event Photographer</dt>
+    <dd>Ashley DiLorenzo</dd>
+  </div>
+  </div>
+    <dt>Interim Producer</dt>
+    <dd>Indu Holdsworth</dd>
+  </div>
 </dl>
 <br>
 <hr>
@@ -241,7 +268,7 @@
     <div class="card-body"> <img class="card-img-top" src="images/Lou.jpg" alt="Headshot of Lou Conrad">
       <h5 class="card-title"><br>
         Lou Conrad '23</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Set Designer</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Set Designer, Captions Operator</h6>
       <p class="card-text">Lou is a 5th year combined major in Theatre and Media Screen Studies. Their previous Northeastern credits include Three Sisters (Ferapont), Urinetown (Mr McQueen) and working backstage in the scene shop and costume department. They also performed in their first professional show at the Apollinaire Theater in Chelsea, Hir, as Max. During the pandemic Lou participated in a few performances over zoom, but sort of disappeared from theater for a bit. They are overjoyed and grateful to be back and working with this group of amazing individuals in person. Theater is beautiful and important. Please keep others safe during this time so we can continue to share why.</p>
     </div>
   </div>
@@ -253,7 +280,7 @@
     <div class="card-body"> <img class="card-img-top" src="images/Dani.jpg" alt="Headshot of Dani Balkin">
       <h5 class="card-title"><br>
         Dani Balkin</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Props Director</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Props Director, Wardrobe Crew, Deck Crew</h6>
       <p class="card-text">Dani Balkin is in her second production role at Northeastern. She’s an American Sign Language English-Interpreting Major with a theater minor. She’s had a great time with New Ren and would like to thank the Beheld team for their time and energy. Enjoy the show! </p>
     </div>
   </div>
@@ -278,7 +305,7 @@
     <div class="card-body"> <img class="card-img-top" src="images/Ethan.jpg" alt="Headshot of Ethan Kjersgard">
       <h5 class="card-title"><br>
         Ethan Kjersgard</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Playwright</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Stage Manager</h6>
       <p class="card-text">ETHAN I NEED BIO</p>
     </div>
   </div>
@@ -328,7 +355,7 @@
     <div class="card-body"> <img class="card-img-top" src="images/Z.jpg" alt="Headshot of Z Weber">
       <h5 class="card-title"><br>
         Z Weber</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Lighting Designer</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Lighting Designer and Op</h6>
       <p class="card-text">Z I NEED BIO</p>
     </div>
   </div>
