--- a/company.html
+++ b/company.html
@@ -245,7 +245,7 @@
       <h5 class="card-title"><br>
         Chi Nguyen</h5>
       <h6 class="card-subtitle mb-2 text-muted">Assistant Director</h6>
-      <p class="card-text">sample text</p>
+      <p class="card-text">Chi is a second-year exchange student currently majoring in Communications. She has had experience directing plays in Vietnam, her home country, but this is her first time joining a theatre production at Northeastern. She hopes to get more involved in the theatre scene in Boston and is excited to develop her skills as a theatremaker. </p>
     </div>
   </div>
 </div>
