--- a/company.html
+++ b/company.html
@@ -356,7 +356,7 @@
       <h5 class="card-title"><br>
         Z Weber</h5>
       <h6 class="card-subtitle mb-2 text-muted">Lighting Designer and Op</h6>
-      <p class="card-text">Z I NEED BIO</p>
+      <p class="card-text">Z is a first year majoring in media and screen studies and journalism with a minor in theatrical design. They have been involved in theatre since age 9 and are so excited to be designing lights for the first time!</p>
     </div>
   </div>
 </div>
