--- a/company.html
+++ b/company.html
@@ -119,16 +119,21 @@
     <dt>Deck Crew</dt>
     <dd>Ainsley Derosier</dd>
   </div>
+  <div>
     <dt>Deck Crew</dt>
     <dd>Eshna Kulshreshtha</dd>
   </div>
-  </div>
+  <div>
     <dt>Event Photographer</dt>
     <dd>Ashley DiLorenzo</dd>
   </div>
-  </div>
+  <div>
     <dt>Interim Producer</dt>
     <dd>Indu Holdsworth</dd>
+  </div>
+  <div>
+    <dt>Production Assistant</dt>
+    <dd>Luna Sewell</dd>
   </div>
 </dl>
 <br>
@@ -183,7 +188,7 @@
         <h5 class="card-title"><br>
           Vidisha Agarwalla '22</h5>
         <h6 class="card-subtitle mb-2 text-muted">Cecilia</h6>
-        <p class="card-text">Wears baggy hoodies and big round glasses. Deplores bigots. Drinks chai. Protests regularly. Supports NGOs. Eats fire. Soaks daal. Dances. Squats. Is concerned. Refuses to be stereotyped.</p>
+        <p class="card-text">Vidisha Agarwalla is a fifth-year doing a Plus One Masters in Creative Practice Leadership. Previous Northeastern credits include Cece in This Is Treatment, Bacchant in The Bacchae, Lighting Designer in Water by the Spoonful and Producer in What Rough Beast for the New Renaissance Theatre Company. Vidisha is also President of the NRTC. Originally from Singapore, she strives to diversify the theatre and performing arts communities. She loves New Ren, the people, and the mission with all her heart. </p>
       </div>
     </div>
 </div>
@@ -207,7 +212,7 @@
       <h5 class="card-title"><br>
         Sarah Waggoner</h5>
       <h6 class="card-subtitle mb-2 text-muted">Marina, [Girl, New Servant]</h6>
-      <p class="card-text"> SARAH I NEED BIO</p>
+      <p class="card-text"> Sarah Waggoner is a second-year Media & Screen Studies and Theatre major with an Art minor, originally from Manchester, CT. This is her first production with New Ren! Previous theatre credits include Northeastern Theatre Department’s production of “This Is Treatment” (Ms. Anita) and costume build crew.</p>
     </div>
   </div>
 </div>
@@ -257,7 +262,7 @@
       <h5 class="card-title"><br>
         Ashley DiLorenzo '25</h5>
       <h6 class="card-subtitle mb-2 text-muted">Event Photographer</h6>
-      <p class="card-text">Ashley is a second year Media and Screen Studies and Theatre major with a songwriting minor from Queens, NY. This is her first time costume designing. Two of her short plays have been produced by Northeastern's Silver Masque over the past two semesters. Previous Northeastern productions include This is Treatment (Ms. Caroline), Love and Information (Actor 5), and The Bacchae (Light Board Operator). She's also a published playwright with YouthPLAYS and will be featured on iHeartRadio Broadway this Saturday, 4/23!</p>
+      <p class="card-text">Ashley is a second year Media and Screen Studies and Theatre major with a songwriting minor from Queens, NY. This is her first time as New Ren’s official photographer after taking the production photos for and costume designing Gruesome Playground Injuries. She’s also on the Silver Masque E-Board (Tech Squad) and her ten-minute play “The Tale of […] Nine Lives”  will be produced this December (woo!). Previous Northeastern productions include This is Treatment (Ms. Caroline), Love and Information (Actor 5), and currently Problem Play (Props Director) and NUStage’s Great Comet (Dolokhov).</p>
     </div>
   </div>
 </div>
@@ -306,7 +311,7 @@
       <h5 class="card-title"><br>
         Ethan Kjersgard</h5>
       <h6 class="card-subtitle mb-2 text-muted">Stage Manager</h6>
-      <p class="card-text">ETHAN I NEED BIO</p>
+      <p class="card-text">Hi I’m Ethan and I’m the Stage Manager for New Ren’s production of Beheld! While I love everything about the cast, crew, and show you are about to watch, I am a very miserable Electrical Engineering and Physics Major who needs to get back to studying for his Calc. 3 midterm… so without further delay… enjoy the show!</p>
     </div>
   </div>
 </div>
@@ -380,7 +385,7 @@
       <h5 class="card-title"><br>
         Eshna Kulshreshtha</h5>
       <h6 class="card-subtitle mb-2 text-muted">Deck Crew</h6>
-      <p class="card-text">ESHNA I NEED BIO</p>
+      <p class="card-text">Eshna is a first-year Marine Biology major who also wants to minor in Music Performance. This is her first production with New Ren. She has always wanted to get more involved with theater and is very excited to be helping out with Beheld!</p>
     </div>
   </div>
 </div>
@@ -393,6 +398,16 @@
         Indu Holdsworth '23</h5>
       <h6 class="card-subtitle mb-2 text-muted">Interim Producer</h6>
       <p class="card-text">Indu is a fourth-year Ecology and Evolutionary Biology major with a minor in Women's Gender and Sexuality Studies. Previous credits include Props Manager for You Can't Take It With You (Bosque), Assistant Stage Manager of Urinetown (Bosque), Sound Operator for Cultural Day Shows (UWC-USA), and Stage Manager of The Box Play (UWC-USA). </p>
+    </div>
+  </div>
+  </div>
+<div class="col-md-4">
+  <div class="card">
+    <div class="card-body"> <img class="card-img-top" src="images/Luna.jpg" alt="Headshot of Luna Sewell">
+      <h5 class="card-title"><br>
+        Luna Sewell '24</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Production Assistant</h6>
+      <p class="card-text">Luna is a third-year Game Art and Animation major from Pinehurst, NC. She has been a member of New Renaissance since 2022, and has both acted and done tech since middle school. When not working for New Renaissance, she is working for the D’Amore-McKim School of Business on a Videography Co-op, or as an Ambassador for the Animation Club. She can also be found playing weird video games, drawing for fun, or talking for hours on end about things no one asked about.</p>
     </div>
   </div>
   </div>
