--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 				<p class="lead">
           <a class="btn btn-light btn-lg" href="thanks.html" role="button">Acknowledgements</a>
        </p>
-		<p><br><br>CONTENT WARNING: Sample Text.</p>
+		<p><br><br>CONTENT WARNING: Mentions of death, screaming, loud noises, and intense dialogue.</p>
     </div>
-
-       <br>
+	<center><img src="images/Apple.jpg" height="1125px" width="750px" alt="A photo of Lead Cast Member Vidisha as Cecilia, gripping an apple in focus. The title Beheld is at front, with written by Ivy Kee written below."></img></center>
+	</div>
+	
+	   <br>
        <hr>
        <div class="row">
           <div class="text-center col-lg-6 offset-lg-3">
