--- a/thanks.html
+++ b/thanks.html
@@ -29,7 +29,10 @@
 		   <div class="col-md-4"><p><br>Northeastern University Department of Theatre</p></div>
 		   <div class="col-md-4"><p><br>Marti McIntosh</p></div>
 		   <div class="col-md-4"><p><br>Marie Siopy</p></div>
-		   
+		   <div class="col-md-4"><p><br>Melinda Lopez</p></div>
+		   <div class="col-md-4"><p><br>Abby Kesselman</p></div>
+		   <div class="col-md-4"><p><br>Oliver Wason</p></div>
+		   <div class="col-md-4"><p><br>Fares</p></div>
            <div class="col-md-4"><p><br>and everyone who attends our productions!</p></div><br><br/>
 		   <div><img class="col-md-4 logo-image" src="images/saf.png" alt="Student Activity Fee logo"><div></div>
        </div>
