--- a/storyandworld.html
+++ b/storyandworld.html
@@ -25,8 +25,9 @@
 		  <h5><strong>Prologue: <i> The Passing of the Rite</i></strong></h5>
 		  </div>
 		  <div class="row">
-		  <img class="column offset-lg-2 imagetwo" src="images/Passing.jpg" alt="Scene from The Passing" </img>
-		  <img class="column imagetwo" src="images/Rite.jpg" alt="Scene from The Rite"></img>
+		  <img class="column offset-lg-2 imagethree" src="images/Passing.jpg" alt="Scene from The Passing" </img>
+		  <img class="column imagethree" src="images/Rite.jpg" alt="Scene from The Rite"></img>
+		  <img class="column imagethree" src="images/Three.jpg" alt="Scene from The Rite depicting the three main actresses of the prologue."></img>
 		  </div>
           <div class="col-lg-6 offset-lg-3">
 		  <p><i>The Passing of The Rite </i>collectively refers to two stories, <i>The Rite</i> and <i>The Passing</i>. In <i>The Rite</i>, a girl and her cousin flee from their village and learn to live with nature and with each other. <i>The Passing</i> explains the significance of <i>The Rite</i>’s myth, through conflicting accounts. Both stories reveal the early history of the world of <i>Beheld</i>.</p>
@@ -48,7 +49,7 @@
 		  </div>
 		  <div class="row">
 		  <img class="column imagefour" src="images/Servant.jpg" alt="Photo of the Servant">
-		  <img class="column imagefour" src="images/Katie Cream Outfit.jpg" alt="Katie Cream Outfit as Sister">
+		  <img class="column imagefour" src="images/Sarah Cream Outfit.jpg" alt="Sarah Cream Outfit as Sister">
 		  <img class="column imagefour" src="images/Katie Black Dress.jpg" alt="Katie in Black Dress as Mistress">
 		  <img class="column imagefour" src="images/Sole Mother.jpg" alt="Sole Mother">
 		  </div>
