--- a/thanks.html
+++ b/thanks.html
@@ -33,6 +33,7 @@
 		   <div class="col-md-4"><p><br>Abby Kesselman</p></div>
 		   <div class="col-md-4"><p><br>Oliver Wason</p></div>
 		   <div class="col-md-4"><p><br>Fares Bourote</p></div>
+		   <div class="col-md-4"><p><br>Adam Regenstreif</p></div>
            <div class="col-md-4"><p><br>and everyone who attends our productions!</p></div><br><br/>
 		   <div><img class="col-md-4 logo-image" src="images/saf.png" alt="Student Activity Fee logo"><div></div>
        </div>
