--- a/note.html
+++ b/note.html
@@ -21,7 +21,7 @@
        </p>
     </div>
        <div class="row">
-          <div class="col-lg-6 offset-lg-3"><p><i>Welcome to New Renaissance Theatre Company’s production of Beheld by Ivy Lee, directed by Jonathan Baron, with assistant direction by Chi Nguyen. Thank you for joining us.</i></p>
+          <div class="col-lg-6 offset-lg-3"><p><i>Welcome to New Renaissance Theatre Company’s production of Beheld by Ivy Kee, directed by Jonathan Baron, with assistant direction by Chi Nguyen. Thank you for joining us.</i></p>
 		  <br>
 		  <p>Originally from a monologue titled The First Dig and a scene based off the ideas: “Lavender”, “Spoon edges”, and “Reviving the dead”, Beheld was created in response to my spring semester Playwriting class’ interest in its mysterious atmosphere and my own enthusiasm at creating pieces that had a interesting journey. I felt drawn to continuing the story, often pondering questions about the bounds of tradition, the power of healing, and sisterhood. The result was a story set in the Medieval era that explored girls’ and women’s talents. It became a well-received final project for the class that I looked forward to submitting it to be produced by student clubs. 
 		  </p>
