--- a/storyandworld.html
+++ b/storyandworld.html
@@ -25,7 +25,7 @@
 		  <h5><strong>Prologue: <i> The Passing of the Rite</i></strong></h5>
 		  </div>
 		  <div class="row">
-		  <img class="column offset-lg-2 imagethree" src="images/Passing.jpg" alt="Scene from The Passing" </img>
+		  <img class="column imagethree" src="images/Passing.jpg" alt="Scene from The Passing" </img>
 		  <img class="column imagethree" src="images/Rite.jpg" alt="Scene from The Rite"></img>
 		  <img class="column imagethree" src="images/Three.jpg" alt="Scene from The Rite depicting the three main actresses of the prologue."></img>
 		  </div>
