--- a/storyandworld.html
+++ b/storyandworld.html
@@ -27,7 +27,7 @@
 		  <div class="row">
 		  <img class="column imagethree" src="images/Passing.jpg" alt="Scene from The Passing" </img>
 		  <img class="column imagethree" src="images/Rite.jpg" alt="Scene from The Rite"></img>
-		  <img class="column imagethree" src="images/Three.jpg" alt="Scene from The Rite depicting the three main actresses of the prologue."></img>
+		  <img class="column imagethree" src="images/three.jpg" alt="Scene from The Rite depicting the three main actresses of the prologue."></img>
 		  </div>
           <div class="col-lg-6 offset-lg-3">
 		  <p><i>The Passing of The Rite </i>collectively refers to two stories, <i>The Rite</i> and <i>The Passing</i>. In <i>The Rite</i>, a girl and her cousin flee from their village and learn to live with nature and with each other. <i>The Passing</i> explains the significance of <i>The Rite</i>’s myth, through conflicting accounts. Both stories reveal the early history of the world of <i>Beheld</i>.</p>
