--- a/company.html
+++ b/company.html
@@ -76,6 +76,10 @@
     <dd>Ethan Kjersgard</dd>
   </div>
   <div>
+	<dt>Assistant Stage Manager</dt>
+	<dd>Isaac Adnan</dd>
+  </div>
+  <div>
 	<dt>Playwright</dt>
 	<dd>Ivy Kee</dd>
   </div>
