--- a/company.html
+++ b/company.html
@@ -315,7 +315,7 @@
       <h5 class="card-title"><br>
         Ethan Kjersgard</h5>
       <h6 class="card-subtitle mb-2 text-muted">Stage Manager</h6>
-      <p class="card-text">Hi I’m Ethan and I’m the Stage Manager for New Ren’s production of Beheld! While I love everything about the cast, crew, and show you are about to watch, I am a very miserable Electrical Engineering and Physics Major who needs to get back to studying for his Calc. 3 midterm… so without further delay… enjoy the show!</p>
+      <p class="card-text">Ethan is the Stage Manager for New Ren’s production of Beheld! While he loves everything about the cast, crew, and show you are about to watch, he is a very miserable Electrical Engineering and Physics Major who needs to get back to studying for his Calc. 3 midterms… so without further delay… enjoy the show!</p>
     </div>
   </div>
 </div>
