--- a/company.html
+++ b/company.html
@@ -87,16 +87,20 @@
     <dt>Costume Designer</dt>
     <dd>Ella Dunn</dd>
   </div>
-    <div>
+  <div>
     <dt>Dramaturg</dt>
     <dd>Ella Dunn</dd>
   </div>
   <div>
-    <dt>Props Director</dt>
-    <dd>Danielle Balkin</dd>
-  </div>
-    <div>
     <dt>Wardrobe Crew</dt>
+    <dd>Ella Dunn</dd>
+  </div>
+  <div>
+    <dt>Wardrobe Crew</dt>
+    <dd>Eshna Kulshreshtha</dd>
+  </div>
+  <div>
+    <dt>Props Director</dt>
     <dd>Danielle Balkin</dd>
   </div>
     <div>
@@ -401,7 +405,7 @@
       <h5 class="card-title"><br>
         Indu Holdsworth '23</h5>
       <h6 class="card-subtitle mb-2 text-muted">Interim Producer</h6>
-      <p class="card-text">Indu is a fourth-year Ecology and Evolutionary Biology major with a minor in Women's Gender and Sexuality Studies. Previous credits include Props Manager for You Can't Take It With You (Bosque), Assistant Stage Manager of Urinetown (Bosque), Sound Operator for Cultural Day Shows (UWC-USA), and Stage Manager of The Box Play (UWC-USA). </p>
+      <p class="card-text">Indu is an Ecology and Evolutionary Biology major, with a minor in women’s gender and sexuality studies. She has been participating in tech since high school and has been a member of New Renaissance since 2021. She likes animals, comic books, and feminism, but can most often be found doing homework, or working at the Northeastern Arboretum. She loves New Renaissance and is excited to work more with everyone this year. </p>
     </div>
   </div>
   </div>
