--- a/company.html
+++ b/company.html
@@ -470,7 +470,7 @@
       <h5 class="card-title"><br>
         Jordan Korgood '24</h5>
       <h6 class="card-subtitle mb-2 text-muted">Treasurer</h6>
-      <p class="card-text">Jordan is 4th year Marine Biology major with a minor in Environmental studies. He has performed in dozens of community theater and high school productions. This is his first production with New Renaissance. He enjoys fishing, sketch comedy, and improv in his free time.</p>
+      <p class="card-text">Jordan is 4th year Marine Biology major with a minor in Environmental studies. They have performed in dozens of community theater and high school productions. They enjoy fishing, sketch comedy, and improv in their free time.</p>
     </div>
   </div>
 </div>
